# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo database library"

[lib]
name = "limbo_core"
path = "lib.rs"

[features]
default = ["fs"]
fs = []

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "*", default-features = false }

[dependencies]
cfg_block = "0.1.1"
fallible-iterator = "0.3.0"
hex = "0.4.3"
libc = "0.2.155"
log = "0.4.20"
nix = { version = "0.29.0", features = ["fs"] }
sqlite3-parser = { path = "../vendored/sqlite3-parser" }
thiserror = "1.0.61"
getrandom = { version = "0.2.15", features = ["js"] }
regex = "1.10.5"
chrono = "0.4.38"
julian_day_converter = "0.3.2"
indexmap = { version="2.2.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
bumpalo = { version = "3.16.0", features = ["collections", "boxed"] }